import org.apache.tools.ant.filters.ReplaceTokens

buildscript {
    apply(from: "dependencies.gradle")

    repositories {
        mavenCentral()
        gradlePluginPortal()
        maven {
            url = uri("https://plugins.gradle.org/m2/")
        }
    }

    dependencies {
        classpath(libraries.springDependencyMangementGradlePlugin)
        classpath(libraries.springBootGradlePlugin)
        classpath(libraries.gradleJcocoPlugin)
        classpath(libraries.sonarqubePlugin)
    }
}

apply(from: "dependencies.gradle")

def applicationPort = project.hasProperty('port') ? project.getProperty('port').toInteger() : 8080

apply(plugin: "war")

allprojects {
    apply(plugin: "io.spring.dependency-management")
    apply(plugin: "org.barfuin.gradle.jacocolog")
    apply(plugin: "org.sonarqube")

    dependencyManagement {
        imports {
            mavenBom(libraries.springBootBom)
        }
    }

    repositories {
        mavenCentral()
        maven {
            url = uri("https://build.shibboleth.net/nexus/content/repositories/releases/")
        }
        maven { url = uri("https://repository.mulesoft.org/releases/") }
    }
}

subprojects {
    apply(plugin: "java")
    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    configurations.configureEach {
        exclude(group: "org.hamcrest", module: "hamcrest-all")
        exclude(group: "org.hamcrest", module: "hamcrest-core")
        exclude(group: "org.hamcrest", module: "hamcrest-library")
        exclude(group: "org.springframework.boot", module: "spring-boot-starter-logging")
        exclude(group: "org.apache.directory.server", module: "apacheds-core")
        exclude(group: "org.apache.directory.server", module: "apacheds-protocol-ldap")
        exclude(group: "org.skyscreamer", module: "jsonassert")
        exclude(group: "com.vaadin.external.google", module: "android-json")
        exclude(group: "com.unboundid.components", module: "json")

        // Exclude opensaml-security-api and non-FIPS bouncycastle libs, and use Shadow library for FIPS compliance
        exclude(group: "org.bouncycastle", module: "bcpkix-jdk15on")
        exclude(group: "org.bouncycastle", module: "bcprov-jdk15on")
        exclude(group: "org.bouncycastle", module: "bcutil-jdk15on")
        exclude(group: "org.bouncycastle", module: "bcprov-jdk18on")
        exclude(group: "org.bouncycastle", module: "bcpkix-jdk18on")
        exclude(group: "org.bouncycastle", module: "bcutil-jdk18on")

        resolutionStrategy {
            resolutionStrategy.eachDependency { DependencyResolveDetails details ->
                if (details.requested.group == 'org.opensaml' && details.requested.name.startsWith("opensaml-")) {
                    details.useVersion "${versions.opensaml}"
                    details.because 'Spring Security 5.8.x allows OpenSAML 3 or 4. OpenSAML 3 has reached its end-of-life. Spring Security 6 drops support for 3, using 4.'
                }
            }
        }
    }

    dependencies {
        testImplementation(libraries.springBootStarterTest) {
            exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
        }
        testImplementation(libraries.hamcrest)
        testImplementation(libraries.junit5JupiterApi)
        testImplementation(libraries.junit5JupiterParams)
        testImplementation(libraries.junit5JupiterEngine)
        testImplementation(libraries.unboundIdLdapSdk)
        testRuntimeOnly(libraries.jacocoAgent)

        // Ensure test runtime dependencies are included
        testRuntimeOnly('org.junit.platform:junit-platform-launcher')

        compileOnly(libraries.lombok)
        annotationProcessor(libraries.lombok)
    }

    [compileJava, compileTestJava]*.options*.compilerArgs = ["-Xlint:none", "-nowarn", "-parameters"]

    test {
        // when failFast = true AND retry is on, there is a serious issue:
        // gradle might stop the test run due to the failFast but still concludes with BUILD SUCCESSFUL (if the retry is successful)
        failFast = false
        useJUnitPlatform()
        jvmArgs += ["-Xmx1024m", "-XX:+StartAttachListener", "-XX:+HeapDumpOnOutOfMemoryError", "-XX:HeapDumpPath=/var/log/uaa-tests.hprof"]

        testLogging {
            events("failed")
            exceptionFormat = "full"
            // Uncomment the following line to see all standard output from tests (there's a ton of it!)
            //showStandardStreams = true
        }
    }

    task integrationTest(type: Test) {
        useJUnitPlatform()

        testLogging {
            events("failed")
            exceptionFormat = "full"
            // Uncomment the following line to see all standard output from tests (there's a ton of it!)
            //showStandardStreams = true
        }
    }

    task generateDocs() {}

    task allDeps(type: DependencyReportTask) {}

    task writeNewPom() {
        doLast {
            pom {
                project {
                    licenses {
                        license {
                            name("The Apache Software License, Version 2.0")
                            url("http://www.apache.org/licenses/LICENSE-2.0.txt")
                            distribution("repo")
                        }
                    }
                }
            }.writeTo("./pom.xml")
        }
    }

    repositories {
        mavenCentral()
        maven {
            url = uri("https://jitpack.io")
        }
        maven {
            url= uri("https://repo.maven.apache.org/maven2")
        }
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", "cloudfoundry-identity-parent"
        property "sonar.organization", "cloudfoundry-1"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.exclusions", "samples/**/*.*,**/*Test.java,**/*Tests.java,**/*IT.java,**/*SecurityConfiguration.java"
        property "sonar.java.source", JavaVersion.current()
    }
}

project.gradle.taskGraph.whenReady { TaskExecutionGraph graph ->
    project.allprojects.collect({ it.tasks.withType(Test) }).flatten().each {
        it.systemProperty("spring.profiles.active", System.getProperty("spring.profiles.active", "hsqldb"))
        it.systemProperty("testId", System.getProperty("testId", ""))
    }
}

tasks.register("run") {
    dependsOn bootWarRun
}

tasks.register("manifests", Copy) {
    dependsOn assemble
    from("uaa/src/test/resources/sample-manifests") {
        include("**/*.yml")
        filter(ReplaceTokens,
                tokens: [
                        version  : version,
                        app      : System.getProperty("app", "myuaa"),
                        appdomain: System.getProperty("app-domain", "bosh-lite.com"),
                ]
        )
    }
    into("build/sample-manifests")
}

tasks.register("integrationTest", Test) {
    dependsOn subprojects.integrationTest
}

// Jacoco report from cargo run
// - To record coverage of cargo run, execute the task with
// `-Dxcoveragerun=true` option, then use this task to generate report from it.
// - e.g. To generate coverage report of integration test:
//   1) ./gradlew integrationTest -Dxcoveragerun=true
//   2) ./bin/kill_uaa.sh
//   3) ./gradlew jacocoCargoReport
//   4) See the Gradle console output for the test coverage summary.
//   5) See `build/reports/jacoco/jacocoCargoReport` for the full report.
tasks.register("jacocoCargoReport", JacocoReport) {
    def javaProjects = subprojects.findAll {
        it.pluginManager.hasPlugin('java')
    }

    executionData(fileTree(layout.buildDirectory).include("jacoco/cargo.exec"))

    FileTree sourceTree = files().asFileTree
    FileTree classTree = files().asFileTree
    javaProjects.each {
        sourceTree += it.sourceSets.main.allJava
        classTree += it.sourceSets.main.output.asFileTree
    }
    additionalSourceDirs = sourceTree
    additionalClassDirs = classTree
}

// task dependencies
assemble.dependsOn(subprojects.assemble)
test.dependsOn(subprojects.test)
test.mustRunAfter(integrationTest)

tasks.register('cleanBootTomcatDir') {
    String tomcatBase = file("scripts/boot/tomcat/").getAbsolutePath()
    delete(java.nio.file.Path.of(tomcatBase))
    new File(tomcatBase+"/work").mkdirs()
    new File(tomcatBase+"/webapps").mkdirs()
}

tasks.register('bootWarRun', JavaExec) {
    dependsOn cleanBootTomcatDir
    dependsOn assemble
    classpath = files(file("uaa/build/libs/cloudfoundry-identity-uaa-0.0.0.war"))
    systemProperty("server.tomcat.basedir", file("scripts/boot/tomcat/").getAbsolutePath())
    systemProperty("SECRETS_DIR", System.getProperty("SECRETS_DIR", file("scripts/cargo").getAbsolutePath()))
    systemProperty("spring.profiles.active", System.getProperty("spring.profiles.active", "hsqldb"))
    systemProperty("metrics.perRequestMetrics", System.getProperty("metrics.perRequestMetrics", "true"))
    systemProperty("smtp.host", "localhost")
    systemProperty("smtp.port", 2525)
    systemProperty("java.security.egd", "file:/dev/./urandom")
    systemProperty("CLOUDFOUNDRY_CONFIG_PATH", file("scripts/cargo").getAbsolutePath())
    systemProperty("server.servlet.context-path", "/uaa")
    systemProperty("statsd.enabled", "true")
}